# gameboy-r

./: Cargo.toml  README.md  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-merge.yml  cd.yml  ci.yml  release.yml
src/: apu.rs  cartridge.rs  clock.rs  cpu.rs  gameboy.rs  joypad.rs  lib.rs  main.rs  memory.rs  mmu.rs  ppu.rs  registers.rs  serial.rs  timer.rs
src/apu/: mod.rs
src/apu/channels/: mod.rs  noise.rs  square.rs  wave.rs
src/cartridges/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  none.rs  rom.rs
src/cpu/: cb_codes.rs  instructions.rs  mod.rs  op_codes.rs  registers.rs
src/ppu/: attribute.rs  hdma.rs  lcd.rs  mod.rs
