[package]
name = "gameboyr"
version = "0.4.0"
description = "A Gameboy emulator written in Rust"
keywords = ["Gameboy", "Emulation", "ROM"]
categories = ["Emulation"]
authors = ["Jordan Shatford <jordanshatford@live.com>"]
license = "MIT"
repository = "https://github.com/jordanshatford/gameboy-r"
edition = "2021"

[dependencies]
argparse = "0.2.2"
minifb = "0.25.0"
cpal = "0.15.3"
blip_buf = "0.1.4"
